--- a/main..html
+++ b/main..html
@@ -24,7 +24,7 @@
 
         <div class="searchbar">
             <input type="text" placeholder="Search" class="searchinput">
-            <button class="searchbtn">Search</button>
+            <button class="searchbtn">Let's Go</button>
         </div>
         
     </div>
