--- a/netflix.html
+++ b/netflix.html
@@ -18,7 +18,7 @@
           ><img src="/netflix-n-logo-0F1ED3EBEB-seeklogo.com.png" alt=""
         /></span>
         <div>
-          <button class="btn">Login In</button>
+          <button class="btn"><a href="/login.html">Login In</a></button>
           <button class="btn btn-red">News And Popular</button>
         </div>
       </nav>
@@ -82,7 +82,7 @@
       </div>
       <div class="secimg">
         <img src="/22237-6-lcd-screen-tv.png" alt="">
-        <video src="/WhatsApp Video 2025-01-06 at 23.32.12_6ba71264.mp4"  autoplay     class="vid" ></video> </div>
+        <video src="/WhatsApp Video 2025-01-06 at 23.32.12_6ba71264.mp4"  autoplay loop     class="vid" ></video> </div>
         <div class="images">
           
           <img src="/tablets.jpg" alt="" class="no2">
